main page filters text

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -52,15 +52,15 @@
 	</ion-range>
 	<ion-list radio-group [(ngModel)]="selection">
 		<ion-item>
-			<ion-label>Any Cuisine</ion-label>
+			<ion-label>No Filter</ion-label>
 			<ion-radio value="newRestaurant"></ion-radio>
 		</ion-item>
 		<ion-item>
-			<ion-label>Recommend Cuisines</ion-label>
+			<ion-label>Recommended Filters</ion-label>
 			<ion-radio value="newCuisine"></ion-radio>
 		</ion-item>
 		<ion-item>
-			<ion-label>Select Cuisines You Want</ion-label>
+			<ion-label>All Filters</ion-label>
 			<ion-radio value="know"></ion-radio>
 		</ion-item>
 	</ion-list>
