--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -60,5 +60,5 @@
 </ion-content>
 
 <ion-footer>
-	<button ion-button (click)="choose()" block>Take me here</button>
+	<button ion-button (click)="done()" block>Munch Here!</button>
 </ion-footer>
