--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -20,7 +20,7 @@
 		<ion-list>
 			<ion-item *ngFor="let rating of activity" (click)="view_restaurant(rating.res_id)">
 				<ion-avatar item-left>
-					<img src="{{ rating.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+					<img src="{{ rating.photo_url || 'assets/imgs/person.png'}}">
 				</ion-avatar>
 				<h2>{{ rating.first_name }} {{rating.last_name}}</h2>
 				<p>{{ rating.liked? 'Liked' : 'Did not like'}} {{ rating.res_name }}</p>
