--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-	<img height="250" class="center" src="{{other_user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+	<img height="250" class="center" src="{{other_user.photo_url || 'assets/imgs/person.png'}}">
 	<div *ngIf="type === 'friend' || type === 'self'">
 		<button *ngIf="type === 'friend'" ion-button outline item-right icon-left (click)="delete_friend()">
 		    <ion-icon name='close'></ion-icon>
@@ -22,8 +22,8 @@
 				<ion-avatar item-left>
 					<img src="{{ rating.photo_url || 'assets/imgs/person.png'}}">
 				</ion-avatar>
-				<h2>{{ rating.first_name }} {{rating.last_name}}</h2>
-				<p>{{ rating.liked? 'Liked' : 'Did not like'}} {{ rating.res_name }}</p>
+				<h2>{{ rating.res_name }}</h2>
+				<p>{{ type === 'self' ? 'You' : rating.first_name }} {{ rating.liked === null ? 'went here' : rating.liked? 'liked it' : 'did not like it'}} </p>
 				<ion-note item-right>{{ rating.review_date }}</ion-note>
 			</ion-item>
 		</ion-list>
@@ -67,5 +67,4 @@
 </ion-content>
 
 <ion-footer>
-	<button ion-button class="center" (click)=back() block>Back</button>
 </ion-footer>
