--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -21,6 +21,10 @@
 		</ion-slides>
 	</ion-card>
 
+	<ion-list-header style="color: white; font-size: 18px" no-lines>
+		Details
+	</ion-list-header>
+
 	<ion-card>
 		<ion-item class="info" style="background-color: #494949;">
 			{{ details.location.address }} 
@@ -43,7 +47,7 @@
 		</ion-item>
 	</ion-card>
 		
-	<ion-list-header no-lines>
+	<ion-list-header style="color: white; font-size: 20px" no-lines>
 		Reviews
 	</ion-list-header>
 
