--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -34,11 +34,11 @@
 			<p style="color: white; float: right;">{{ details.location.distance }} miles</p> <br>
 
 			{{ details.phone }}
-			<a href="{{details.website}}" style="float: right;">Website</a> <br>
+			<a href="{{details.website}}" style="float: right;">Website/Menu</a> <br>
 			
 			<p style="color: #ff4e00;" *ngIf=[details.opennow]> Open Now! </p>
 
-			<img class="center" [src]="map"> <br> <br>
+			<img class="center" [src]="map" (click)="navigate()"> <br> <br>
 		</ion-item>
 	</ion-card>
 		
