--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -25,7 +25,7 @@
 				<button (click)="rate(res.rating_id, res.res_id, false)" ion-button outline item-right icon-left>
 					<ion-icon name='thumbs-down'></ion-icon>
 				</button>
-				<button (click)="dismiss(res.res_id)" ion-button outline item-right icon-left >
+				<button (click)="dismiss_rating(res.rating_id)" ion-button outline item-right icon-left >
 				    <ion-icon name='close'></ion-icon>
 				</button>
 			</ion-item>
