--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -24,9 +24,9 @@
 			<ion-card-content *ngIf="res.location">
 				{{ res.location.address }}<br>
 				{{ res.distance }} miles away<br>
-				
 			</ion-card-content>
-			<h3 style="color: white;">{{ res.evidence }}</h3>
+			<br>
+			<h2 style="color: #ff4e00;">{{ res.evidence }}</h2>
 		</ion-card>
 	</div>
 	<div *ngIf="display_options && liked_cards.length != 0" class="center">
@@ -40,7 +40,7 @@
 		<button ion-button class="center" (click)="go_back()">Try Different Filters</button>
 		<button ion-button class="center" (click)="start_over()">View Again</button>
 	</div>
-	<div *ngIf="all_cards.length === 0">
+	<div *ngIf="!loading && all_cards.length === 0">
 		<p>Looks like there were no results that matched those filters. You could try different filters or a larger search radius</p>
 		<button ion-button class="center" (click)="go_back()">Ok</button>
 	</div>
