splice instead of refresh

--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -10,7 +10,7 @@
 	<div *ngIf="ratings && ratings.length > 0">
 		<ion-title>Pending Ratings</ion-title>
 		<ion-list>
-			<ion-item *ngFor="let res of ratings">
+			<ion-item *ngFor="let res of ratings; let myIndex = index">
 				<ion-avatar item-left (click)="view_restaurant(res.res_id)">
 					<img src="{{ res.photo_url }}">
 				</ion-avatar>
@@ -25,7 +25,7 @@
 				<button (click)="rate(res.rating_id, res.res_id, false)" ion-button outline item-right icon-left>
 					<ion-icon name='thumbs-down'></ion-icon>
 				</button>
-				<button (click)="dismiss_rating(res.rating_id)" ion-button outline item-right icon-left >
+				<button (click)="dismiss_rating(res.rating_id, myIndex)" ion-button outline item-right icon-left >
 				    <ion-icon name='close'></ion-icon>
 				</button>
 			</ion-item>
