--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -25,7 +25,7 @@
 		<ion-item *ngIf="loading && (!activity || activity.length == 0)">
 			<ion-label>Loading...</ion-label>
 		</ion-item>
-		<ion-item *ngIf="!loading && activity && activity.length == 0">
+		<ion-item *ngIf="activity && activity.length == 0">
 			<h2>Looks like you have no friends with activity yet</h2>
 			<button ion-button (click)="add_friends()">Add Friends</button>
 		</ion-item>
