buttons, tutorials, orientation lock

--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -48,5 +48,5 @@
 </ion-content>
 
 <ion-footer>
-	<button ion-button class="center" (click)=search() block>Search</button>
+	<button ion-button class="center" (click)=search() block>Search For Restaurants</button>
 </ion-footer>
