--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -44,5 +44,5 @@
 </ion-content>
 <ion-footer>
 
-	<button ion-button class="center" (click)="search()" [disabled]="loading" block> {{loading?  'Loading...' : "Let's Munch"}}</button>
+	<button ion-button class="center" (click)="search()" [disabled]="loading" block> {{loading?  'Loading...' : "Search For Restaurants"}}</button>
 </ion-footer>
