--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -18,7 +18,7 @@
 <ion-content>
 	<div swing-stack #myswing1 [stackConfig]="stackConfig" (throwout)="throw_out($event.throwDirection)" id="card-stack">
 		<ion-card #mycards1 swing-card *ngFor="let res of cards">
-			<img (click)="info(res.res_id)" height="300" *ngIf="res.photo" [src]="res.photo">
+			<img (click)="info()" height="300" *ngIf="res.photo" [src]="res.photo">
 			
 			<ion-title>{{ res.name }} <ion-icon (click)=star_res() name="{{(res.starred)? 'star' : 'star-outline'}}"></ion-icon></ion-title>
 			<ion-card-content *ngIf="res.location">
@@ -29,20 +29,23 @@
 			<h2 style="color: #ff4e00;">{{ res.evidence }}</h2>
 		</ion-card>
 	</div>
-	<div *ngIf="display_options && liked_cards.length != 0" class="center">
-		<button ion-button icon-right class="center" (click)="see_liked()">Show liked restaurants
-		<ion-icon name="thumbs-up"></ion-icon>
-		</button>
-		<p>Tip: Tap on the card or "Restaurant Details" to see more information and "Done" when you've made your choice</p>
-	</div>
-	<div *ngIf="display_options && liked_cards.length == 0">
-		<p>Looks like you didn't swipe right on any restaurants.</p>
-		<button ion-button class="center" (click)="go_back()">Try Different Filters</button>
-		<button ion-button class="center" (click)="start_over()">View Again</button>
-	</div>
-	<div *ngIf="!loading && all_cards.length === 0">
-		<p>Looks like there were no results that matched those filters. You could try different filters or a larger search radius</p>
-		<button ion-button class="center" (click)="go_back()">Ok</button>
+	<div style="{text-align: center;}">
+		<div *ngIf="display_options && liked_cards.length != 0" class="center">
+			<button ion-button icon-right class="center" (click)="see_liked()">Show liked restaurants
+			<ion-icon name="thumbs-up"></ion-icon>
+			</button>
+				
+			<p class="center">Tip: Tap on the card or "Restaurant Details" to see more information and "Done" when you've made your choice</p>
+		</div>
+		<div *ngIf="display_options && liked_cards.length == 0">
+			<p>Looks like you didn't swipe right on any restaurants.</p>
+			<button ion-button class="center" (click)="go_back()">Try Different Filters</button>
+			<button ion-button class="center" (click)="start_over()">View Again</button>
+		</div>
+		<div *ngIf="!loading && all_cards.length === 0">
+			<p>Looks like there were no results that matched those filters. You could try different filters or a larger search radius</p>
+			<button ion-button class="center" (click)="go_back()">Ok</button>
+		</div>
 	</div>
 </ion-content>
 
@@ -61,5 +64,5 @@
 </div>
 
 <ion-footer *ngIf="!display_options">
-	<button ion-button class="center" (click)="info(res.res_id)" block>Restaurant Details</button>
+	<button ion-button class="center" (click)="info()" block>Restaurant Details</button>
 </ion-footer>
