No token expiration

--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -25,7 +25,7 @@
 	</ion-card>
 
 	<ion-list-header style="color: white; font-size: 18px" no-lines>
-		Details
+		Map
 	</ion-list-header>
 
 	<ion-card>
