--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -31,13 +31,14 @@
 	<ion-card>
 		<ion-item class="info" style="background-color: #414141;">
 			{{ details.location.address }} 
-			<p style="color: white; float: right;">{{ details.location.distance }} miles</p> <br>
+			<p style="color: white; float: right;"> > {{ details.location.distance }} miles</p> <br>
 
 			{{ details.phone }}
 			<a href="{{details.website}}" style="float: right;">Website/Menu</a> <br>
 			
 			<p style="color: #ff4e00;" *ngIf=[details.opennow]> Open Now! </p>
 
+			<p style="color: white; float: right;">{{ get_price() }}</p>
 			<img class="center" [src]="map" (click)="navigate()"> <br> <br>
 		</ion-item>
 	</ion-card>
