--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -31,7 +31,7 @@
 	<ion-card>
 		<ion-item class="info" style="background-color: #414141;">
 			{{ details.location.address }} 
-			<p style="color: white; float: right;"> > {{ details.location.distance }} miles</p> <br>
+			<p style="color: white; float: right;"> < {{ details.location.distance }} miles</p> <br>
 
 			{{ details.phone }}
 			<a href="{{details.website}}" style="float: right;">Website/Menu</a> <br>
