preparing for beta launch

--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -24,12 +24,12 @@
 		</ion-slides>
 	</ion-card>
 
-	<ion-list-header style="color: white; font-size: 18px" no-lines>
+	<ion-list-header style="color: white; font-size: 18px; background: #353535"  no-lines>
 		Map
 	</ion-list-header>
 
 	<ion-card>
-		<ion-item class="info" style="background-color: #414141;">
+		<ion-item class="info">
 			{{ details.location.address }} 
 			<p style="color: white; float: right;"> < {{ details.location.distance }} miles</p> <br>
 
@@ -43,7 +43,7 @@
 		</ion-item>
 	</ion-card>
 		
-	<ion-list-header style="color: white; font-size: 18px" no-lines>
+	<ion-list-header style="color: white; font-size: 18px; background: #353535" no-lines>
 		Reviews
 	</ion-list-header>
 
