--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -12,32 +12,32 @@
 	<ion-content style="height:60vh">
 		<ion-list *ngIf="items && items.length > 0">
 			<div *ngFor="let item of items">
-				<ion-item style="background: #393939" *ngIf="marked[item]">
+				<ion-item *ngIf="marked[item]">
 					<ion-label>{{ item }}</ion-label>
 					<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
 				</ion-item>
 			</div>
-			<ion-item *ngIf="recommended.length > 0" no-lines>
+			<ion-item *ngIf="recommended.length > 0" style="background: #353535" no-lines>
 				<ion-label item-left>Recommended For You</ion-label>
 			</ion-item>
 			<div *ngFor="let item of recommended">
-				<ion-item style="background: #393939" *ngIf="!marked[item]">
+				<ion-item *ngIf="!marked[item]">
 					<ion-label>{{ item }}</ion-label>
 					<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
 				</ion-item>
 			</div>
-			<ion-item no-lines>
+			<ion-item style="background: #353535" no-lines>
 				<ion-label item-left>All</ion-label>
 			</ion-item>
 			<div *ngFor="let item of items">
-				<ion-item style="background: #393939" *ngIf="!marked[item]">
+				<ion-item *ngIf="!marked[item]">
 					<ion-label>{{ item }}</ion-label>
 					<ion-checkbox [(ngModel)]="marked[item]" item-left></ion-checkbox>
 				</ion-item>
 			</div>
 		</ion-list>
 	</ion-content>
-	<ion-item no-lines>
+	<ion-item  style="background: #353535"no-lines>
 		<ion-label item-left>Distance (miles)</ion-label>
 		<ion-badge item-right>{{ distance }} mile{{ distance  > 1 ? 's' : ''}} </ion-badge>
 	</ion-item>
