--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,11 +1,11 @@
 <ion-content padding>
   <img height="200" class="center" src="assets/imgs/munchr.png"/>
-  <ion-item>
+  <ion-item style="background: #353535">
     <ion-label floating>Email</ion-label>
     <ion-input [(ngModel)]="email" type="email"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item style="background: #353535">
     <ion-label floating>Password</ion-label>
     <ion-input [(ngModel)]="password" type="password"></ion-input>
   </ion-item>
