--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -17,7 +17,7 @@
 
 <ion-content>
 	<img height="100" class="center" src="assets/imgs/munchr.png"/>
-	<ion-item no-lines>
+	<ion-item  style="background: #353535" no-lines>
 		<ion-label item-left>Friend Activity</ion-label>
 	</ion-item>
 	<ion-content style="height:60vh">
@@ -29,7 +29,7 @@
 			<h2>Looks like you have no friends with activity yet</h2>
 			<button ion-button (click)="add_friends()">Add Friends</button>
 		</ion-item>
-		<ion-item style="background: #393939" *ngFor="let rating of activity">
+		<ion-item *ngFor="let rating of activity">
 			<ion-avatar item-left (click)="view_account(rating)">
 				<img src="{{ rating.photo_url || 'assets/imgs/person.png'}}">
 			</ion-avatar>
