--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -10,7 +10,7 @@
 	<ion-list *ngIf="users && users.length > 0">
 		<ion-item *ngFor="let user of users">
 			<ion-avatar item-left (click)="view_account(user)">
-				<img src="{{ user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+				<img src="{{ user.photo_url || 'assets/imgs/person.png'}}">
 			</ion-avatar>
 			<h2 (click)="view_account(user)">{{ user.first_name }} {{user.last_name}}</h2>
 		</ion-item>
