fix for dismissing notifications

--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -13,7 +13,7 @@
 	<ion-list>
 		<ion-item *ngFor="let user of requests">
 			<ion-avatar item-left (click)="view_account(user)">
-				<img src="{{ user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+				<img src="{{ user.photo_url || 'assets/imgs/person.png'}}">
 			</ion-avatar>
 			<h2 (click)="view_account(user)">{{ user.first_name }} {{user.last_name}}</h2>
 			<button (click)="respond(true, user)" ion-button outline item-right icon-left>
@@ -29,8 +29,8 @@
 	<ion-title *ngIf="friends && friends.length > 0">Friends</ion-title>
 	<ion-list>
 		<ion-item  *ngFor="let user of friends" (click)="view_account(user)">
-			<ion-avatar item-left (click)="view_account(user)">
-				<img src="{{ user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+			<ion-avatar item-left>
+				<img src="{{ user.photo_url || 'assets/imgs/person.png'}}">
 			</ion-avatar>
 			<h2>{{ user.first_name }} {{user.last_name}}</h2>
 		</ion-item>
