price moved to server

--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -24,7 +24,7 @@
 			<ion-card-content *ngIf="res.location">
 				{{ res.location.address }}<br>
 				< {{ res.distance }} miles away<br>
-				{{ get_price(myIndex) }}<br>
+				{{ res.price }}<br>
 			</ion-card-content>
 			<br>
 			<h2 style="color: #ff4e00;">{{ res.evidence }}</h2>
