--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -50,7 +50,7 @@
 			
 			
 		<p class="review">
-			<ion-icon [name]="review.rating >= 0 ? 'star' : 'star-outline'"></ion-icon>
+			<ion-icon name="star"></ion-icon>
 			<ion-icon [name]="review.rating > 1 ? 'star' : 'star-outline'"></ion-icon>
 			<ion-icon [name]="review.rating > 2 ? 'star' : 'star-outline'"></ion-icon>
 			<ion-icon [name]="review.rating > 3 ? 'star' : 'star-outline'"></ion-icon>
